	  messages, away states, online/offline, etc.  Huge thanks to Christian,
	  Dave West, and Daniel Atallah
	* Beautiful new default sounds (Brad Turcotte)
	* gaim-remote can send text (John B. Silvestri)
	* Autoreconnect plugin can hide the reconnect dialog (François Gagné)
	* Screenname colors in chats now chosen intelligently from GNOME color
	  palette
	* Yahoo! has the following new "/" commands:  /join, /buzz
	* Smiley selection dialog rewritten to look nicer (Nathan Fredrickson)
	* If Gaim is exited with the buddy list hidden in the docklet, it will
	  remain hidden when Gaim is started again (Scott Shedden)
	* Contacts will auto-expand when dragging into the buddy list.
	* SSL support for IRC connections (Daniel Atallah)

	Bug fixes:
	* Some memory leaks plugged (Miah Gregory, Felipe Contreras)
	* People using input methods can now use Enter again.
	* Many problems related to having an IM conversation and a chat open
	  with the same name (Andrew Hart)

	Preference changes:
	* Removed "Dim idle buddies" buddy list preference, default to "Yes."
	* Removed keyboard shortcut preferences for ctrl-b/i/u and made sure they
	  won't interfere with bindings set by the GTK theme.
	* Removed keyboard shortcuts preferences for ctrl-# to insert a smiley,
	  default to "No"
	* Removed preference for buddy list button type, defaulted to "None"
	* Removed "Enter" vs. "Ctrl-Enter" to send, defaulted to "Enter" to send,
	  made it possible to change this binding in your GTK theme.
	* Removed "Show multi-colored screennames in chats," defaulted to "Yes."
	  Made screenname colors automatically adjust themselves to compensate for
	  background color.
	* Removed "Raise Buddy List Window on Events" defaulted to "No"
	* Removed "Display remote nicknames if no alias is set"
	* Removed "Show idle times" and "Show warning levels" from the buddy list
	  defaulted to "Yes".
	* Removed "Auto-expand contacts" default to "No"
	* Removed conversation buttons