@@ -35,6 +35,7 @@ Vincas Ciziunas
 Joe Clarke
 Todd Cohen
 Felipe Contreras
+Alex Converse
 Adam Cowell
 Jeramey Crawford
 Balwinder Singh Dheeman
